@@ -7,6 +7,7 @@
 * Code refactored to use Ruby 1.9 features.
 * #eval_parameters can now call private methods.  Requested by Ole Rasmussen.
 * Can now determine state of :onlyif fields.  Requested by Ole Rasmussen.
+* Renamed #offset to #abs_offset for clarity.  #offset is now deprecated.
 
 == Version 2.0.0 (2014-02-02)
 
